Fix T55750: Crash on moving sequencer strip

Custom-data free callback was freeing transform data too.